# qq

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake.yml
include/: qq.h
include/qq/: out.h  statements.h  verbose.h
src/: out.c  verbose.c
test/: CMakeLists.txt  main.cc  verbose.cc
